<resources>
    <string name="app_name" translatable="false">MoneySpace</string>
    <string name="login">登录</string>
    <string name="edit_code_tip">请输入正确的验证码</string>
    <string name="text_get_code">获取验证码</string>
    <string name="edit_mobile_tip">请输入正确的手机号</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="contact_search">搜索</string>
    <string name="commit">提交</string>
    <string name="send_group_chat">发起群聊</string>
    <string name="invite_friends">添加好友</string>
    <string name="scan">扫一扫</string>
    <string name="collection_and_payment">收款</string>
    <string name="select_contacts">选择联系人</string>
    <string name="change_language">切换语言</string>
    <string name="zh_cn">简体中文</string>
    <string name="zh_tw">繁体中文</string>
    <string name="en_us" translatable="false">English</string>
    <string name="de_actionbar_sub_group">"社群"</string>
    <string name="m_add_friend_contact_label_1">手机联系人</string>
    <string name="m_add_friend_scan_it_label_1">扫一扫</string>
    <string name="m_personal_information_signature_text">添加到通讯录</string>
    <string name="m_verification_title_bar">验证申请</string>
    <string name="m_verification_send_btn">发送</string>
    <string name="m_item_contact_type_text">已添加</string>
    <string name="m_fragment_new_friend_title_bar">新的朋友</string>
    <string name="m_edit_information_area_label">地区</string>
    <string name="m_edit_information_btn">完成</string>
    <string name="code_label">验证码已经发送，请注意查收</string>
    <string name="m_delete_popup">删除</string>
    <string name="update_rename">修改备注</string>
    <string name="recommend_to_friend">推荐给好友</string>
    <string name="m_delete_friend_constant">删除联系人</string>
    <string name="m_delete_friend_label">将联系人“%1$s”，删除，同时删除与该联系人的聊天记录</string>
    <string name="m_cancel_btn">取消</string>
    <string name="sign">个性签名</string>
    <string name="hint_sign">请输入个性签名</string>
    <string name="nick">昵称</string>
    <string name="hint_nick">请输入昵称</string>
    <string name="hint_email">请输入邮箱</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="authen_true">已认证</string>
    <string name="authen_false">未认证</string>
    <string name="none">暂无</string>
    <string name="update_head_portrail">更新头像成功</string>
    <string name="input_empty">请输入内容</string>
    <string name="wechat">微信</string>
    <string name="hilamg">海浪</string>
    <string name="m_red_envelopes_label">鸿运当头，大吉大利</string>
    <string name="m_red_envelopes_money_text" translatable="false">0.00</string>
    <string name="m_red_envelopes_commit_btn">塞进红包</string>
    <string name="m_transfer_commit_btn">确认转账</string>
    <string name="m_successful_transfer_title_bar">转账详情</string>
    <string name="m_successful_transfer_label">转账成功</string>
    <string name="m_transfer_pending_return_text">24小时内对方未确认，将退还给你。</string>
    <string name="m_transfer_info_pending_payment_text">待收款</string>
    <string name="m_transfer_info_commit_btn">确认</string>
    <string name="m_transfer_info_caveat_text">24小时内未确认，将退还给对方</string>
    <string name="m_expired_envelopes_info">查看领取详情 ></string>
    <string name="m_add_my_way_title_bar">添加我的方式</string>
    <string name="m_add_my_way_duoduo_id">Hilamg号</string>
    <string name="m_add_my_way_phone_id">手机号</string>
    <string name="m_add_my_way_group_chat_text">群聊</string>
    <string name="m_add_my_way_qrcode_text">二维码</string>
    <string name="m_add_my_way_business_carde_text">名片</string>
    <string name="m_add_my_way_caveat_label">关闭后、用户不能通过以上方式找到你</string>
    <string name="privacy">隐私</string>
    <string name="m_privacy_add_friend_verify_text">加我为朋友时需要验证</string>
    <string name="m_privacy_hide_real_name_text">隐藏我的真实姓名</string>
    <string name="m_privacy_recommend_friend">向我推荐通讯录里的朋友</string>
    <string name="m_privacy_recommend_friend_caveat">开启后，为您推荐已经开通Hilamg的手机联系人</string>
    <string name="m_privacy_add_my_way">添加我的方式</string>
    <string name="feedback_title">意见反馈</string>
    <string name="feedback_edit">留下你宝贵的意见</string>
    <string name="choosesex">性别选择</string>
    <string name="determine_btn">确定</string>
    <string name="collection_code">收款码</string>
    <string name="user_name">周晓瑞</string>
    <string name="login_out">已退出登录</string>
    <string name="account_number">账号</string>
    <string name="pricacy">隐私</string>
    <string name="help_center">帮助中心</string>
    <string name="online_service">在线客服</string>
    <string name="id_number">证件号码</string>
    <string name="type_of_certificate">证件类型</string>
    <string name="id_card">身份证</string>
    <string name="passport">护照</string>
    <string name="other_identity_card">其他国家或地区的身份证</string>
    <string name="bank_real_name">真实姓名</string>
    <string name="cointype">当前币种</string>
    <string name="group_chat_name_label">群聊名称</string>
    <string name="see_more_group_members">查看更多群成员></string>
    <string name="group_announcement">群公告</string>
    <string name="dissolution_group">解散群</string>
    <string name="all_group_members_title">全部群成员</string>
    <string name="group_announcement_edit">请编辑群公告</string>
    <string name="update_pay_pwd">修改支付密码</string>
    <string name="authentication">身份验证</string>
    <string name="sms_verified">短信验证</string>
    <string name="please_enter_the_id_number">请输入证件号码</string>
    <string name="verified_message">验证信息</string>
    <string name="phone_number_label">手机号码</string>
    <string name="verified_code">验证码</string>
    <string name="please_input_id_card">请先输入证件号码</string>
    <string name="tiem_new_code">秒后重新获取</string>
    <string name="blockWallet">数字钱包</string>
    <string name="huazhuan">划转</string>
    <string name="zhuanchu">转出</string>
    <string name="verifing">认证中</string>
    <string name="currentCoin">当前币种</string>
    <string name="inputwalletaddress">请输入钱包地址</string>
    <string name="inputZhuanChuCount">请输入转出数量</string>
    <string name="zhuanchuCount">转出数量</string>
    <string name="kuanggongprice">矿工费用</string>
    <string name="invite_to_group_chat">邀请你加入群聊</string>
    <string name="join_a_group_chat">加入群聊</string>
    <string name="announcement_edit_successful">群公告修改成功</string>
    <string name="please_input_announcement">请先填写群公告</string>
    <string name="exit_group">退出群聊</string>
    <string name="you_have_disbanded_the_group">您已解散该群</string>
    <string name="you_have_left_the_group_chat">您已退出群聊</string>
    <string name="slow">慢</string>
    <string name="fast">快</string>
    <string name="transfer_group_successful">转让成功</string>
    <string name="send_verification">发送验证</string>
    <string name="verifyfirstpls">请先完成实名认证</string>
    <string name="verifying_pleasewait">正在实名认证中，请等待认证结果</string>
    <string name="receiptAddress">收款地址</string>
    <string name="tradeOrder">交易号</string>
    <string name="block">区块</string>
    <string name="zhuanru">收款</string>
    <string name="zhuanchusuccess">转账成功</string>
    <string name="please_set_paypass">请设置支付密码</string>
    <string name="please_input_paypass">请设置支付密码</string>
    <string name="please_set_paypass_twtice">请再次填写以确认</string>
    <string name="passnotsame">与上次输入不一致,请重新设置</string>
    <string name="successfully_modified">修改成功</string>
    <string name="please_set_paypass1">请重新设置支付密码</string>
    <string name="please_set_paypass2">点击完成结束设置</string>
    <string name="add_friend_successful">添加好友成功</string>
    <string name="app_prompt_text">还没有好友,赶快去添加吧</string>
    <string name="failed">失败</string>
    <string name="success">成功</string>
    <string name="procssing">进行中</string>
    <string name="all">全部</string>
    <string name="red_packet">红包</string>
    <string name="photo_image_title">图片</string>
    <string name="shotting_image_title">拍照</string>
    <string name="transfer_money_title">转账</string>
    <string name="personal_business_card_title">个人名片</string>
    <string name="location_address_title">位置</string>
    <string name="transfer_prompt_logo">Hilamg转账</string>
    <string name="business_card_label">个人名片</string>
    <string name="inputzhuanzhangmoney">请输入转账金额</string>
    <string name="inputzhuanzhangmoney1">转账金额不能为0</string>
    <string name="done1">完成</string>
    <string name="receive1">已领取</string>
    <string name="receive3">已存入对方的账户中</string>
    <string name="yituihuan">已退还</string>
    <string name="yiguoqi">已过期</string>
    <string name="share_business_card">确定分享该名片吗？</string>
    <string name="transfer_commit_successful">提交成功</string>
    <string name="set_pay_pwd">设置支付密码</string>
    <string name="input_redmoney">请输入红包金额</string>
    <string name="userinfo">个人资料</string>
    <string name="redrecord">红包记录</string>
    <string name="red_tips">未领取的红包，将于24小时后退款</string>
    <string name="select_group">选择要分享的群组</string>
    <string name="search">搜索</string>
    <string name="input_sign">请输入个性签名</string>
    <string name="save">保存</string>
    <string name="notaemail">请输入正确的email</string>
    <string name="waitAuthentication">请耐心等待审核完成</string>
    <string name="add">添加</string>
    <string name="setsuccess">设置成功</string>
    <string name="has_bean_sent">发送成功</string>
    <string name="regain_verification_code">重新获取</string>
    <string name="regain_after_seconds">秒后重新获取</string>
    <string name="the_friend_has_been_deleted">该好友已删除</string>
    <string name="please_enter_phone_number">请输入手机号</string>
    <string name="please_enter_verification_code">请输入验证码</string>
    <string name="please_enter_a_valid_phone_number">请输入正确的手机号</string>
    <string name="verification_code_error">验证码错误</string>
    <string name="the_verification_code_has_been_sent_please_check">验证码已发送，请注意查收</string>
    <string name="please_enter_feedback_comments">请输入反馈的意见</string>
    <string name="duplicated_to_clipboard">已复制至剪切板</string>
    <string name="change_phone_number">更换手机号</string>
    <string name="please_enter_new_phone_number">请输入新的手机号</string>
    <string name="remark_name">填写备注名称</string>
    <string name="gender">性别</string>
    <string name="new_message">新消息通知</string>
    <string name="real_name_authentication">实名认证</string>
    <string name="not_verify_real_name">未认证</string>
    <string name="feedback">意见反馈</string>
    <string name="about_duo_duo">关于Hilamg</string>
    <string name="language_switch">语言切换</string>
    <string name="pay_setting">支付设置</string>
    <string name="logout1">退出登录</string>
    <string name="shareto">分享到</string>
    <string name="zone">朋友圈</string>
    <string name="qq">qq</string>
    <string name="qzone">qq空间</string>
    <string name="update_group_limit">升级群人数</string>
    <string name="update_group_limit_tips1">此群是</string>
    <string name="update_group_limit_tips2">人群</string>
    <string name="rule">规则</string>
    <string name="update_group_limit_tips3">1. 群主和管理员可通过付费对群人数进行升级。\n2. 群人数升级后、转让群、人数上限保留。</string>
    <string name="createwallet_success_tips1">请备份钱包</string>
    <string name="createwallet_success_tips2">区块链钱包不同于传统网站账户,它是基于密码学的去中心化账户系统。\n您必须保管好钱包的私钥和交易密码,任何意外将会导致资产账户丢失</string>
    <string name="createwallet_success_tips3">备份助记词</string>
    <string name="createwallet_success_tips4">丢失钱包或忘记密码时,可帮助恢复钱包。</string>
    <string name="backup">立即备份</string>
    <string name="backup_later">稍后备份</string>
    <string name="setting_vibrates">底部图标震动</string>
    <string name="buy" translatable="false">购买</string>
    <string name="sell" translatable="false">出售</string>
    <string name="transaction_type" translatable="false">交易类型</string>
    <string name="transaction_status" translatable="false">交易状态</string>
    <string name="for_the_payment" translatable="false">待付款</string>
    <string name="payment_has_been" translatable="false">已付款</string>
    <string name="has_been_completed" translatable="false">已完成</string>
    <string name="has_been_cancelled" translatable="false">已取消</string>
    <string name="in_the_complaint" translatable="false">申诉中</string>
    <string name="reset" translatable="false">重置</string>
    <string name="determine" translatable="false">确定</string>
</resources>