<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/transaction_type"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp">

            <CheckBox
                android:id="@+id/radio1"
                style="@style/select_style"
                android:background="@drawable/shape_checkbox_item2"
                android:tag="rd1"
                android:text="@string/buy" />

            <CheckBox
                android:id="@+id/radio2"
                style="@style/select_style"
                android:background="@drawable/shape_checkbox_item2"
                android:tag="rd1"
                android:text="@string/sell" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/transaction_status"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <CheckBox
                    android:id="@+id/radio3"
                    style="@style/select_style"
                    android:background="@drawable/shape_checkbox_item2"
                    android:tag="rd1"
                    android:text="@string/for_the_payment" />

                <CheckBox
                    android:id="@+id/radio4"
                    style="@style/select_style"
                    android:background="@drawable/shape_checkbox_item2"
                    android:tag="rd1"
                    android:text="@string/payment_has_been" />

                <CheckBox
                    android:id="@+id/radio5"
                    style="@style/select_style"
                    android:background="@drawable/shape_checkbox_item2"
                    android:tag="rd1"
                    android:text="@string/has_been_completed" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">


                <CheckBox
                    android:id="@+id/radio6"
                    style="@style/select_style"
                    android:background="@drawable/shape_checkbox_item2"
                    android:tag="rd1"
                    android:text="@string/has_been_cancelled" />

                <CheckBox
                    android:id="@+id/radio7"
                    style="@style/select_style"
                    android:background="@drawable/shape_checkbox_item2"
                    android:tag="rd1"
                    android:text="@string/in_the_complaint" />

                <CheckBox style="@style/select_style" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#BDD5FF"
                android:foreground="?selectableItemBackgroundBorderless"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/reset"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_determine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:foreground="?selectableItemBackgroundBorderless"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/determine"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/text_select_color" />
    </LinearLayout>

</FrameLayout>