<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@drawable/shape_bac_white_conor6"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/shareto"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="12dp"
            android:background="#E9E9E9"
            android:layout_width="match_parent"
            android:layout_height="0.5dp" />

        <LinearLayout
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv1"
                android:drawableTop="@drawable/ic_invite_share1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawablePadding="6dp"
                android:gravity="center"
                android:textColor="@color/textcolor3"
                android:text="@string/wechat"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv2"
                android:drawableTop="@drawable/ic_invite_share2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawablePadding="6dp"
                android:gravity="center"
                android:textColor="@color/textcolor3"
                android:text="@string/zone"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv3"
                android:drawableTop="@drawable/ic_invite_share3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawablePadding="6dp"
                android:gravity="center"
                android:textColor="@color/textcolor3"
                android:text="@string/qq"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv4"
                android:drawableTop="@drawable/ic_invite_share4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawablePadding="6dp"
                android:gravity="center"
                android:textColor="@color/textcolor3"
                android:text="@string/qzone"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv5"
                android:drawableTop="@drawable/ic_invite_share5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawablePadding="6dp"
                android:gravity="center"
                android:textColor="@color/textcolor3"
                android:text="@string/save"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>