<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.msgpage.UpdateGroupLimitActivity">

    <include layout="@layout/layout_title_back" />

    <View
        android:background="#F8F8F8"
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:padding="12dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="16sp"
            android:text="@string/update_group_limit"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/update_group_limit_tips1"
            android:textColor="@color/textcolor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvGroupLimit"
            android:textColor="#F2723A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/update_group_limit_tips2"
            android:textColor="@color/textcolor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp" />

    <LinearLayout
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_width="match_parent"
        android:layout_weight="0.4"
        android:orientation="vertical"
        android:layout_height="0dp">

        <TextView
            android:textSize="16sp"
            android:layout_marginBottom="6dp"
            android:text="@string/rule"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <TextView
            android:lineSpacingExtra="5dp"
            android:text="@string/update_group_limit_tips3"
            android:textColor="@color/textcolor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>